# Vendange

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml  repomix.config.json
VendangeReactPort/: index.html  package-lock.json  package.json
VendangeReactPort/src/: App.css  App.tsx
VendangeReactPort/src/app/: style.css  types.ts  workspace.ts
VendangeReactPort/src/app/components/: EntityLabel.tsx  IntermarcView.tsx  ShortcutModal.tsx  WorkspaceTabs.tsx  WorkspaceView.tsx
VendangeReactPort/src/app/core/: agents.ts  clusters.ts  constants.ts  entities.ts  intermarc-utils.ts  records.ts  shortcuts.ts  theme.ts  unclustered.ts
VendangeReactPort/src/app/hooks/: useArkDecoratedText.ts  useRecordLookup.ts  useTranslation.ts
VendangeReactPort/src/app/lib/: csvHeaders.ts  intermarc.ts
VendangeTypeScript/: index.html  package-lock.json  package.json  vite.config.ts
VendangeTypeScript/src/: i18n.ts
VendangeTypeScript/src/lib/: intermarc.ts
VendangeTypeScript/src/locales/: en.json
data/: test_honorific.csv
data_curation/: ark_fetcher.py  cli.py  models.py  pipeline_title_contamination.py  requirements.txt
data_curation/api/: __init__.py  search.py
data_curation/authority/: nes_store.py  sru_client.py
data_curation/curation/: operations.py
data_curation/matching/: triggers.py
data_inspection/: index.html  package-lock.json  package.json
data_inspection/docs/: Javascript_integration_and_parameters_reference.html  Use_Sparnatural_in_React.html  oxigraph_npm.html
data_inspection/src/: App.css  App.tsx  declaration.d.ts  main.tsx
data_inspection/src/app/: i18n.ts  style.css
data_inspection/src/app/core/: agents.ts  (+5 more)
scripts/authority/: nes_service.py
scripts/curation/: pipeline.py
scripts/matching/: detector.py
scripts/utils/: text_norm.py  title_cleaner.py
sql/: comtesse_segur_work_ids.txt  sql_query.md
src/: main.ts  style.css
src/lib/: csv.ts  intermarc.ts
src/locales/: en.json  fr.json
src/types/: tanstack-virtual-core.d.ts
(+42 files in other folders)
