[project]
name = "Vendange"
version = "0.1.0"
description = "Vérification Experte, Nettoyage et Dédoublonnage des Arbres NOEMI par Grappage Enchâssé"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "blis>=1.2.1",
    "catalogue==2.0.10",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "cloudpathlib==0.22.0",
    "confection==0.1.5",
    "curated-tokenizers==0.0.9",
    "curated-transformers==0.1.1",
    "cymem==2.0.11",
    "filelock==3.19.1",
    "fr-dep-news-trf",
    "fsspec==2025.9.0",
    "idna==3.10",
    "jinja2==3.1.6",
    "langcodes==3.5.0",
    "language-data==1.3.0",
    "marisa-trie==1.3.1",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings-python",
    "mkdocstrings-typescript",
    "mpmath==1.3.0",
    "murmurhash==1.0.13",
    "networkx==3.5",
    "numpy==1.26.4",
    "packaging==25.0",
    "preshed==3.0.10",
    "protobuf==3.20.3",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "pygments==2.19.2",
    "regex==2025.9.18",
    "requests==2.32.5",
    "rich==14.1.0",
    "sentencepiece==0.2.1",
    "shellingham==1.5.4",
    "smart-open==7.3.1",
    "spacy==3.8.7",
    "spacy-curated-transformers==0.3.1",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "srsly==2.5.1",
    "sympy==1.14.0",
    "thinc>=8.3.4",
    "torch==2.2.2",
    "tqdm==4.67.1",
    "typer==0.19.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "wasabi==1.1.3",
    "weasel==0.4.1",
    "wrapt==1.17.3",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[tool.uv.sources]
fr-dep-news-trf = { url = "https://github.com/explosion/spacy-models/releases/download/fr_dep_news_trf-3.8.0/fr_dep_news_trf-3.8.0-py3-none-any.whl" }
